--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark">
   <div class="order-1 nav-item">
-    <a class="site-logo" href="{{ "/" | absolute_url }}">
+    <a class="pl-3 site-logo" href="{{ "/" | absolute_url }}">
       <span>Tatu Arvela</span>
     </a>
   </div>
