--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
-<header class="jumbotron mb-0 text-white bg-primary">
+<header class="p-5 mt-0 mb-0 text-white bg-primary">
   {% include nav.html %}
 </header>
