--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark">
+<nav class="navbar navbar-expand-md">
   <div class="order-1 nav-item">
     <a class="pl-3 site-logo" href="{{ "/" | absolute_url }}">
       <span>Tatu Arvela</span>
