--- a/_includes/components/contact-form.html
+++ b/_includes/components/contact-form.html
@@ -13,7 +13,7 @@
       <label for="message">Your message to me</label>
       <textarea class="form-control" name="message" id="message" rows="3" required></textarea>
     </div>
-    <input class="btn btn-success px-5 font-weight-bold" type="submit" value="Send" />
+    <input class="btn btn-primary px-5 font-weight-bold" type="submit" value="Send" />
   </div>
 </form>
 <script>
