--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="text-secondary text-right p-5 {% if page.frontpage %} anim-fade-in {% endif %}">
-  <p class="pt-1 px-3">&copy; 2019 Tatu Arvela. All rights reserved.</p>
+<footer class="anim-fade-in">
+  <p>&copy; {{ 'now' | date: "%Y" }} {{site.title}}. All rights reserved.</p>
 </footer>
