--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,57 @@
-<header class="p-5 mt-0 mb-0">
-  {% include nav.html %}
+<header class="anim-fade-in">
+  <div class="site-logo-item">
+    <a class="site-logo" href="#">
+      <span>{{site.title}}</span>
+    </a>
+  </div>
+  <nav class="main-nav">
+    <ul>
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.linkedin.com/in/tatuarvela/">
+          <span>LinkedIn</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/TatuArvela">
+          <span>GitHub</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.behance.net/TatuArvela">
+          <span>Bēhance</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">
+          <span>Contact</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 </header>
+<nav class="mobile-nav" id="menu">
+  <a class="menu-toggle on" href="#menu">☰</a>
+  <a class="menu-toggle off" href="#">☰</a>
+  <ul>
+    <li class="nav-item">
+      <a class="nav-link" href="https://www.linkedin.com/in/tatuarvela/">
+        <span>LinkedIn</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="https://github.com/TatuArvela">
+        <span>GitHub</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="https://www.behance.net/TatuArvela">
+        <span>Bēhance</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#contact">
+        <span>Contact</span>
+      </a>
+    </li>
+  </ul>
+</nav>
