--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -1,10 +1,9 @@
-$dark:        #505050
-$gray:        #696969
-$light:       #f6f6f6
+$body-bg:     white
+$body-color:  #0e1111
+$primary:     #2b00ff
+$theme-colors: ("primary": $primary)
 
 $breakpoint:  768px
-
-$theme-colors: ("primary": $gray, "secondary": $dark, "gray": $gray, "light": $light, "dark": $dark)
 
 $font-family-sans-serif: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $font-family-monospace: "Fira Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
