--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -1,6 +1,6 @@
 $body-bg:     white
 $body-color:  #0e1111
-$primary:     #2b00ff
+$primary:     #4553ff
 $theme-colors: ("primary": $primary)
 
 $breakpoint:  768px
