--- a/_sass/_index.sass
+++ b/_sass/_index.sass
@@ -13,7 +13,7 @@
   justify-content: center
 
 .title
-  padding: 3rem
+  padding: 3rem 0
   margin-bottom: 0.5rem
   text-align: center
   font-size: 4rem
