--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,5 @@
 
 
 <!-- Styles -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Mono|Nunito+Sans">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans">
 <link rel="stylesheet" type="text/css" media="screen" href="{{ "/assets/css/style.css" | absolute_url }}" />
