Mobile improvements and search engine optimization

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
     </ul>
   </nav>
 </header>
-<nav class="mobile-nav" id="menu">
+<nav class="mobile-nav">
   <a class="menu-toggle on" href="#menu">☰</a>
   <a class="menu-toggle off" href="#">☰</a>
   <ul>
