--- a/_sass/_contact.sass
+++ b/_sass/_contact.sass
@@ -39,8 +39,9 @@ form
   background-color: #fff
   background-clip: border-box
   border: 2px solid rgba(0,0,0,0.125)
-  width: 420px
-  height: 594px
+  width: calc(100vw - 3rem)
+  max-width: 420px
+  max-height: 594px
   position: absolute
   top: 50%
   left: 50%
