--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>{% if page.frontpage %}{{ site.title }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
+<title>{{ site.title }} - {{ page.title }}</title>
 <meta name="description" content="{{ page.description }}">
 
 
@@ -19,7 +19,7 @@
 <!-- OpenGraph -->
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:type" content="website">
-<meta property="og:title" content="{{ page.title }} - {{ site.title }}">
+<meta property="og:title" content="{{ site.title }} - {{ page.title }}">
 <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip | strip_html }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 <meta property="og:image" content="{{ "/assets/img/image.png" | absolute_url }}">
 
