--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,10 +4,10 @@
   {% include head.html %}
 </head>
 <body>
-  <div class="page">
+  <div class="page" id="menu">
     {% include header.html %}
     <div class="content-container anim-fade-in anim-delay-1">
-      <h1 class="title">{{page.title}}</h1>
+      <h1 class="title">developer <span class="title-ampersand">&</span> designer</h1>
       <div class="content">
         {{content}}
       </div>
