--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -64,7 +64,7 @@ nav.mobile-nav
   flex-direction: column
   height: 0
   margin: 0 -3.5rem
-  margin-top: 2rem
+  margin-top: 3rem
   padding: 0
   box-shadow: inset 0 0 10px #000000
   transition: all 1s
@@ -84,19 +84,20 @@ nav.mobile-nav
         text-decoration: none
         padding: 1.5rem 1.5rem
         transition: all 0.5s
-  &:target
-    height: 192px+64px
-    padding: 2rem 0
-    .menu-toggle.on
-      display: none
-    .menu-toggle.off
-      display: block
-    ul
-      opacity: 1
-      pointer-events: auto
   @media screen and (min-width: $breakpoint)
     opacity: 0
     pointer-events: none
+
+#menu:target nav.mobile-nav
+  height: 192px+64px
+  padding: 2rem 0
+  .menu-toggle.on
+    display: none
+  .menu-toggle.off
+    display: block
+  ul
+    opacity: 1
+    pointer-events: auto
 
 .menu-toggle
   display: block
