--- a/_sass/_index.sass
+++ b/_sass/_index.sass
@@ -22,6 +22,8 @@
   transition: all 0.3s
   @media screen and (min-width: $breakpoint)
     font-size: 6rem
+  .title-ampersand
+    font-weight: normal
 
 .content
   padding: 0 3rem
