--- a/_sass/_contact.sass
+++ b/_sass/_contact.sass
@@ -1,22 +1,3 @@
-.close
-  @extend .button
-  width: 2em
-  height: 2em
-  line-height: 2em
-  position: absolute
-  right: -1em
-  top: -1em
-  border-radius: 50%
-  font-weight: bold
-  text-align: center
-  padding: 0
-  border: 0
-  opacity: 0.75
-  transition: opacity 0.3s
-  &:hover
-    text-decoration: none
-    opacity: 1
-
 .contact
   position: fixed
   top: 0
@@ -34,12 +15,15 @@
     form
       opacity: 1
       transform: translate(-50%, -50%) scale(1)
+    .close
+      display: block
 
 form
-  background-color: #fff
+  background-color: $body-bg
   background-clip: border-box
-  border: 2px solid rgba(0,0,0,0.125)
+  box-shadow: 0 0 10px rgba($black, 0.25)
   width: calc(100vw - 3rem)
+  height: calc(100vh - 3rem)
   max-width: 420px
   max-height: 594px
   position: absolute
@@ -50,7 +34,44 @@ form
   opacity: 0
   transition: all 0.3s
 
+label
+  display: inline-block
+  margin-bottom: .5rem
+
 input[type=text],
 textarea
-  @extend .form-control
+  @include form-control-focus()
+  display: block
+  width: 100%
+  padding: 0.375rem 0.75rem
+  font-size: 1rem
+  line-height: 1.5
+  color: $body-color
+  background-color: $body-bg
+  background-clip: padding-box
+  border: $border-width solid $border-color
+  border-radius: 0
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
   margin-bottom: 1rem
+  height: auto
+  resize: none
+
+.close
+  @extend .button
+  display: none
+  width: 2em
+  height: 2em
+  line-height: 2em
+  position: absolute
+  right: -1em
+  top: -1em
+  border-radius: 50%
+  font-weight: bold
+  text-align: center
+  padding: 0
+  border: 0
+  opacity: 0.75
+  transition: opacity 0.3s
+  &:hover
+    text-decoration: none
+    opacity: 1
