--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -27,16 +27,19 @@ header
     &:after
       content: ''
       display: block
-      border-bottom: 2px solid theme-color("primary")
+      border-bottom: 2px solid darken($primary, 15%)
       width: 0
       position: absolute
       left: 0
       bottom: -2px
       transition: 0.2s ease
-  &:hover
+  &:hover,
+  &:focus
+    color: darken($primary, 15%)
     text-decoration: none
     transition: all 0.2s
     opacity: 1
+    outline: none
     span:after
       width: 100%
 
@@ -55,9 +58,13 @@ nav.main-nav
   pointer-events: none
   ul
     flex-direction: row
+    li a
+      display: none
   @media screen and (min-width: $breakpoint)
     opacity: 1
     pointer-events: auto
+    ul li a
+      display: inline
 
 nav.mobile-nav
   display: flex
@@ -66,7 +73,7 @@ nav.mobile-nav
   margin: 0 -3.5rem
   margin-top: 3rem
   padding: 0
-  box-shadow: inset 0 0 10px #000000
+  box-shadow: inset 0 0 10px $black
   transition: all 1s
   overflow: hidden
   ul
@@ -80,7 +87,7 @@ nav.mobile-nav
       line-height: 0
       transition: all 0.5s
       a
-        display: block
+        display: none
         text-decoration: none
         padding: 1.5rem 1.5rem
         transition: all 0.5s
@@ -98,6 +105,8 @@ nav.mobile-nav
   ul
     opacity: 1
     pointer-events: auto
+    li a
+      display: block
 
 .menu-toggle
   display: block
@@ -110,7 +119,7 @@ nav.mobile-nav
   width: 3rem
   height: 3rem
   opacity: 1
-  transition: color 0.3s
+  transition: all 0.5s
   pointer-events: auto
   cursor: pointer
   text-align: center
@@ -118,7 +127,10 @@ nav.mobile-nav
   &:hover, &:focus
     outline: none
     text-decoration: none
+    transform: scale(1.2)
+    color: darken($primary, 15%)
   @media screen and (min-width: $breakpoint)
+    display: none
     opacity: 0
     pointer-events: none
   &.off
@@ -131,7 +143,6 @@ nav.mobile-nav
   text-align: left
   a
     padding: 1rem 1.5rem
-    opacity: 0.8
     color: theme-color("primary")
     text-decoration: none
     span
@@ -139,15 +150,17 @@ nav.mobile-nav
       &:after
         content: ''
         display: block
-        border-bottom: 2px solid theme-color("primary")
+        border-bottom: 2px solid darken($primary, 15%)
         width: 0
         position: absolute
         left: 0
         bottom: -2px
         transition: 0.2s ease
   &:hover a,
-  &:active a
+  &:active a,
+  a:focus
+    color: darken($primary, 15%)
     transition: all 0.2s
-    opacity: 1
+    outline: none
     span:after
       width: 100%
