--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -1,14 +1,11 @@
-$body-bg:     white
-$body-color:  #040F3D
-$primary:     #4553ff
-$theme-colors: ("primary": $primary)
+$body-bg:       #fff
+$body-color:    #040F3D
 
-$breakpoint:  768px
+$primary:       #0061ff
+$border-color:  rgba( $body-color, .25 )
 
 $font-family-sans-serif: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-$navbar-brand-font-size: 2rem
-$headings-margin-bottom: 1rem
-$paragraph-margin-bottom: 2rem
-
 $enable-rounded: false
 $border-width: 2px
+
+$breakpoint:  768px
