--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,18 +4,16 @@
 $baseurl: "{{ site.baseurl }}";
 
 @import 'variables';
-
 @import "./bootstrap/functions/";
 @import "./bootstrap/variables/";
 @import "./bootstrap/mixins/";
 @import "./bootstrap/reboot/";
+@import 'tweaks';
 
 @import "./bootstrap/buttons/";
-@import "./bootstrap/forms/";
 
 @import 'animations';
 @import 'type';
-
+@import 'index';
 @import 'contact';
 @import 'header';
-@import 'index';
