--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 
 
 <!-- Icons -->
+<link rel="icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
 <meta name="theme-color" content="#004e92">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/icon/apple-touch-icon.png" | absolute_url }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/icon/favicon-32x32.png" | absolute_url }}">
