--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -73,7 +73,7 @@ nav.mobile-nav
   margin: 0 -3.5rem
   margin-top: 3rem
   padding: 0
-  box-shadow: inset 0 0 10px $black
+  box-shadow: inset 0 0 10px rgba($black, 0.25)
   transition: all 1s
   overflow: hidden
   ul
