--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -10,6 +10,7 @@ header
 
 .site-logo-item
   flex-grow: 1
+  padding-left: 1.5rem
 
 .site-logo
   @extend .nav-item
@@ -111,7 +112,7 @@ nav.mobile-nav
 .menu-toggle
   display: block
   top: 3rem
-  right: 2.5rem
+  right: 3rem
   position: absolute
   border: none
   background: none
