Increased link text size

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -144,6 +144,7 @@ nav.mobile-nav
   text-align: left
   a
     padding: 1rem 1.5rem
+    font-size: 1.25rem
     color: theme-color("primary")
     text-decoration: none
     span
