--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -10,7 +10,8 @@ header
 
 .site-logo-item
   flex-grow: 1
-  padding-left: 1.5rem
+  @media screen and (min-width: $breakpoint)
+    padding-left: 1.5rem
 
 .site-logo
   @extend .nav-item
@@ -112,7 +113,7 @@ nav.mobile-nav
 .menu-toggle
   display: block
   top: 3rem
-  right: 3rem
+  right: 2rem
   position: absolute
   border: none
   background: none
