Improved page title animation

--- a/_sass/_animations.sass
+++ b/_sass/_animations.sass
@@ -10,6 +10,20 @@
   animation-fill-mode: forwards
   animation-duration: 0.8s
 
+@keyframes fade-in-and-condense
+  from
+    opacity: 0
+    letter-spacing: 0.05em
+  to
+    opacity: 1
+    letter-spacing: normal
+
+.anim-fade-in-and-condense
+  opacity: 0
+  animation: fade-in-and-condense
+  animation-fill-mode: forwards
+  animation-duration: 0.8s
+
 .anim-delay-1
   animation-delay: 0.1s
   z-index: 90
