--- a/_sass/_index.sass
+++ b/_sass/_index.sass
@@ -20,6 +20,9 @@
   font-weight: bold
   line-height: 1.2
   transition: all 0.3s
+  white-space: nowrap
+  margin-left: -100%
+  margin-right: -100%
   @media screen and (min-width: $breakpoint)
     font-size: 6rem
   .title-ampersand
