--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,9 +6,9 @@
 <body>
   <div class="page" id="menu">
     {% include header.html %}
-    <div class="content-container anim-fade-in anim-delay-1">
-      <h1 class="title">developer<br><span class="title-ampersand">&</span> designer</h1>
-      <div class="content">
+    <div class="content-container">
+      <h1 class="title anim-fade-in-and-condense anim-delay-1">developer<br><span class="title-ampersand">&</span> designer</h1>
+      <div class="content anim-fade-in anim-delay-1">
         {{content}}
       </div>
     </div>
