Rewrote link styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,28 @@
 <header class="anim-fade-in">
-  <div class="site-logo-item">
-    <a class="site-logo" href="#">
+  <div class="site-logo">
+    <a href="#">
       <span>{{site.title}}</span>
     </a>
   </div>
   <nav class="main-nav">
     <ul>
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.linkedin.com/in/tatuarvela/">
+      <li>
+        <a href="https://www.linkedin.com/in/tatuarvela/">
           <span>LinkedIn</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://github.com/TatuArvela">
+      <li>
+        <a href="https://github.com/TatuArvela">
           <span>GitHub</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.behance.net/TatuArvela">
+      <li>
+        <a href="https://www.behance.net/TatuArvela">
           <span>Bēhance</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#contact">
+      <li>
+        <a href="#contact">
           <span>Contact</span>
         </a>
       </li>
@@ -30,26 +30,26 @@
   </nav>
 </header>
 <nav class="mobile-nav">
-  <a class="menu-toggle on" href="#menu">☰</a>
-  <a class="menu-toggle off" href="#">☰</a>
+  <a class="menu-toggle on" href="#menu"><span>☰</span></a>
+  <a class="menu-toggle off" href="#"><span>☰</span></a>
   <ul>
-    <li class="nav-item">
-      <a class="nav-link" href="https://www.linkedin.com/in/tatuarvela/">
+    <li>
+      <a href="https://www.linkedin.com/in/tatuarvela/">
         <span>LinkedIn</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="https://github.com/TatuArvela">
+    <li>
+      <a href="https://github.com/TatuArvela">
         <span>GitHub</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="https://www.behance.net/TatuArvela">
+    <li>
+      <a href="https://www.behance.net/TatuArvela">
         <span>Bēhance</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#contact">
+    <li>
+      <a href="#contact">
         <span>Contact</span>
       </a>
     </li>
