--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -8,53 +8,27 @@ header
   display: flex
   align-items: center
 
-.site-logo-item
+.site-logo
   flex-grow: 1
   transition: all 0.2s
   @media screen and (min-width: $breakpoint)
     padding-left: 1.5rem
-
-.site-logo
-  @extend .nav-item
-  font-size: 2rem
-  line-height: inherit
-  white-space: nowrap
-  display: inline
-  position: relative
-  font-weight: bold !important
-  font-family: "Nunito Sans", sans-serif
-  letter-spacing: 0.075em
-  transition: all 0.2s
-  span
-    position: relative
-    &:after
-      content: ''
-      display: block
-      border-bottom: 2px solid darken($primary, 15%)
-      width: 0
-      position: absolute
-      left: 0
-      bottom: -2px
-      transition: 0.2s ease
-  &:hover,
-  &:focus
-    color: darken($primary, 15%)
-    text-decoration: none
-    transition: all 0.2s
-    opacity: 1
-    outline: none
-    span:after
-      width: 100%
+  a
+    font-size: 2rem
+    font-weight: bold !important
+    letter-spacing: 0.075em
 
 nav ul
   display: flex
   padding-left: 0
   margin-bottom: 0
   list-style: none
+  font-size: 1.25rem
 
 nav.main-nav
   display: flex
   flex-direction: row
+  padding-right: 1.5rem
   font-size: 1rem
   transition: all 0.5s
   opacity: 0
@@ -63,6 +37,7 @@ nav.main-nav
     flex-direction: row
     li a
       display: none
+      margin-left: 0.5em
   @media screen and (min-width: $breakpoint)
     opacity: 1
     pointer-events: auto
@@ -82,34 +57,30 @@ nav.mobile-nav
   ul
     flex-direction: column
     transition: all 0.5s
-    opacity: 0
     pointer-events: none
     li
       text-align: right
-      padding: 0 3rem
+      margin: 0 2rem
+      padding: 1.5rem 2.5rem
       line-height: 0
       transition: all 0.5s
-      a
-        display: none
-        text-decoration: none
-        padding: 1.5rem 1.5rem
-        transition: all 0.5s
+      display: block
+      flex-grow: 1
   @media screen and (min-width: $breakpoint)
+    height: 0 !important
+    margin-top: 0 !important
     opacity: 0
     pointer-events: none
 
 #menu:target nav.mobile-nav
-  height: 192px+64px
+  height: calc(192px + 4rem)
   padding: 2rem 0
   .menu-toggle.on
     display: none
   .menu-toggle.off
     display: block
   ul
-    opacity: 1
     pointer-events: auto
-    li a
-      display: block
 
 .menu-toggle
   display: block
@@ -117,8 +88,8 @@ nav.mobile-nav
   right: 2rem
   position: absolute
   border: none
-  background: none
   font-size: 2rem
+  line-height: 2.25rem
   width: 3rem
   height: 3rem
   opacity: 1
@@ -127,44 +98,9 @@ nav.mobile-nav
   cursor: pointer
   text-align: center
   z-index: 300
-  &:hover, &:focus
-    outline: none
-    text-decoration: none
-    transform: scale(1.2)
-    color: darken($primary, 15%)
   @media screen and (min-width: $breakpoint)
     display: none
     opacity: 0
     pointer-events: none
   &.off
     display: none
-
-.nav-item
-  display: inline-block
-  padding: 0
-  border: 0
-  text-align: left
-  a
-    padding: 1rem 1.5rem
-    font-size: 1.25rem
-    color: theme-color("primary")
-    text-decoration: none
-    span
-      position: relative
-      &:after
-        content: ''
-        display: block
-        border-bottom: 2px solid darken($primary, 15%)
-        width: 0
-        position: absolute
-        left: 0
-        bottom: -2px
-        transition: 0.2s ease
-  &:hover a,
-  &:active a,
-  a:focus
-    color: darken($primary, 15%)
-    transition: all 0.2s
-    outline: none
-    span:after
-      width: 100%
