--- a/_sass/_index.sass
+++ b/_sass/_index.sass
@@ -18,7 +18,7 @@
   text-align: center
   font-size: 4rem
   font-weight: bold
-  line-height: 1.2
+  line-height: 1em
   transition: all 0.3s
   white-space: nowrap
   margin-left: -100%
