--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,5 +26,5 @@
 
 
 <!-- Styles -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" type="text/css" media="screen" href="{{ "/assets/css/style.css" | absolute_url }}" />
