--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -4,7 +4,7 @@ $body-color:    #040F3D
 $primary:       #0061ff
 $border-color:  rgba( $body-color, .25 )
 
-$font-family-sans-serif: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+$font-family-sans-serif: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $enable-rounded: false
 $border-width: 2px
 
