--- a/_sass/_index.sass
+++ b/_sass/_index.sass
@@ -18,15 +18,17 @@
   text-align: center
   font-size: 4rem
   font-weight: bold
-  line-height: 1em
+  line-height: 0.8em
   transition: all 0.3s
   white-space: nowrap
   margin-left: -100%
   margin-right: -100%
   @media screen and (min-width: $breakpoint)
     font-size: 6rem
-  .title-ampersand
+  .title__ampersand
     font-weight: normal
+  .title__second-line
+    font-size: 0.6em
 
 .content
   padding: 0 3rem
