--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@
   <div class="page" id="menu">
     {% include header.html %}
     <div class="content-container">
-      <h1 class="title anim-fade-in-and-condense anim-delay-1">developer<br><span class="title-ampersand">&</span> designer</h1>
+      <h1 class="title anim-fade-in-and-condense anim-delay-1">developer<br><span class="title__second-line"><span class="title__ampersand">&</span> designer</span></h1>
       <div class="content anim-fade-in anim-delay-1">
         {{content}}
       </div>
