Update style. Remove Bootstrap & JavaScript

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,5 @@
 <header class="anim-fade-in">
-  <div class="site-logo">
-    <a href="#">
-      <span>{{site.title}}</span>
-    </a>
-  </div>
+  <div class="site-logo">{{site.title}}</div>
   <nav class="main-nav">
     <ul>
       <li>
