--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <div class="contact" id="contact">
-  <form id="formspree" method="POST">
-    <a class="close" href="#">&times;</a>
+  <form method="POST" action="https://formspree.io/%63%6F%6E%74%61%63%74@%74%61%74%75%61%72%76%65%6C%61%2E%63%6F%6D">
+    <a class="close" href="#"><span>&#10005;</span></a>
     <h2>Contact me</h2>
 
     <label for="name">Your name</label>
@@ -12,13 +12,8 @@
     <label for="message">Your message to me</label>
     <textarea name="message" id="message" rows="8" required></textarea>
 
-    <input class="button" type="submit" value="Send" />
+    <button type="submit">
+      <span>Send</span>
+    </button>
   </form>
 </div>
-<script>
-window.onload = function () {
-  var address = atob('dGF0dS5hcnZlbGFAZ21haWwuY29t');
-  var formspree = document.getElementById('formspree');
-  formspree.action = 'https://formspree.io/' + address;
-}
-</script>
