--- a/_sass/_contact.sass
+++ b/_sass/_contact.sass
@@ -15,15 +15,16 @@
     form
       opacity: 1
       transform: translate(-50%, -50%) scale(1)
+      display: flex
+      flex-direction: column
     .close
       display: block
 
 form
   background-color: $body-bg
   background-clip: border-box
-  box-shadow: 0 0 10px rgba($black, 0.25)
-  width: calc(100vw - 3rem)
-  height: calc(100vh - 3rem)
+  box-shadow: 0 0 10px rgba($body-color, 0.25)
+  width: calc(100vw - 3rem - 40px)
   max-width: 420px
   max-height: 594px
   position: absolute
@@ -40,9 +41,7 @@ label
 
 input[type=text],
 textarea
-  @include form-control-focus()
   display: block
-  width: 100%
   padding: 0.375rem 0.75rem
   font-size: 1rem
   line-height: 1.5
@@ -56,17 +55,51 @@ textarea
   height: auto
   resize: none
 
+button[type=submit]
+  border: none
+  font-size: 1.2rem
+  font-family: inherit
+  padding: 1rem
+  cursor: pointer
+  width: auto
+  align-self: end
+  span
+    position: relative
+    text-transform: uppercase
+
 .close
-  @extend .button
   display: none
-  width: 2em
+  width: 4em
   height: 2em
   line-height: 2em
   position: absolute
-  right: -1em
-  top: -1em
-  border-radius: 50%
+  right: 0
+  top: 0
   font-weight: bold
   text-align: center
   padding: 0
   border: 0
+
+button[type=submit],
+.close
+  background: $primary
+  color: $body-bg
+  span
+    &:after
+      content: ''
+      display: block
+      border-bottom: 0.1em solid $body-bg
+      width: 0
+      position: absolute
+      left: 0
+      bottom: 0
+      transition: 0.2s ease
+  &:hover,
+  &:focus
+    color: $body-bg
+    outline: none
+    text-decoration: none
+    transition: all 0.2s
+    outline: none
+    span:after
+      width: 100%
