--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -1,7 +1,7 @@
-$body-bg:       #f7f7f7
+$body-bg:       #f5f5f5
 $body-color:    #040F3D
 
-$primary:       #0061ff
+$primary:       #040F3D
 $border-color:  rgba( $body-color, .25 )
 
 $font-family-sans-serif: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
@@ -9,3 +9,4 @@ $enable-rounded: false
 $border-width: 2px
 
 $breakpoint:  768px
+$breakpoint-tiny: 359px
