--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -77,14 +77,15 @@ nav.mobile-nav
     opacity: 1
 
 #menu:target nav.mobile-nav
-  height: calc(130px + 4rem)
-  padding: 2rem 0
-  .menu-toggle.on
-    display: none
-  .menu-toggle.off
-    display: block
-  ul
-    pointer-events: auto
+  @media screen and (max-width: $breakpoint)
+    height: calc(130px + 4rem)
+    padding: 2rem 0
+    .menu-toggle.on
+      display: none
+    .menu-toggle.off
+      display: block
+    ul
+      pointer-events: auto
 
 .menu-toggle
   display: none
