Fix minor difference on Chrome

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -63,7 +63,7 @@ nav.mobile-nav
     transition: all 0.5s
     pointer-events: none
     li
-      align-self: end
+      align-self: flex-end
       margin: 0 2rem
       padding: 1.5rem 2.5rem
       line-height: 0
