--- a/_sass/_contact.sass
+++ b/_sass/_contact.sass
@@ -62,7 +62,7 @@ button[type=submit]
   padding: 1rem
   cursor: pointer
   width: auto
-  align-self: end
+  align-self: flex-end
   span
     position: relative
     text-transform: uppercase
