--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,11 +1,5 @@
 ---
 ---
 
-$baseurl: "{{ site.baseurl }}";
-
-@import 'variables';
-@import 'animations';
-@import 'type';
+$baseurl: '{{ site.baseurl }}';
 @import 'index';
-@import 'contact';
-@import 'header';
