Make includes more modular

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="anim-fade-in">
+<footer class="Footer">
   <p>&copy; {{ 'now' | date: "%Y" }} {{site.title}}. All rights reserved.</p>
 </footer>
