--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,30 +1,39 @@
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>{{ site.title }}. {{ page.title }}</title>
-<meta name="description" content="{{ page.description }}">
+  <title>{{ site.title }} — {{ page.title }}</title>
+  <meta name="description" content="{{ page.description }}" />
 
+  <!-- Icons -->
+  <link rel="icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
+  <meta name="theme-color" content="#f7f7f7" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{
+  "/assets/icon/apple-touch-icon.png" | absolute_url }}"> <link rel="icon"
+  type="image/png" sizes="32x32" href="{{ "/assets/icon/favicon-32x32.png" |
+  absolute_url }}"> <link rel="icon" type="image/png" sizes="16x16" href="{{
+  "/assets/icon/favicon-16x16.png" | absolute_url }}"> <link rel="manifest"
+  href="{{ "/assets/icon/manifest.json" | absolute_url }}"> <link rel="shortcut
+  icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}"> <meta
+  itemprop="image" content="{{ "/assets/img/image.png" | absolute_url }}">
 
-<!-- Icons -->
-<link rel="icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
-<meta name="theme-color" content="#f7f7f7">
-<link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/icon/apple-touch-icon.png" | absolute_url }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/icon/favicon-32x32.png" | absolute_url }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/icon/favicon-16x16.png" | absolute_url }}">
-<link rel="manifest" href="{{ "/assets/icon/manifest.json" | absolute_url }}">
-<link rel="shortcut icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
-<meta itemprop="image" content="{{ "/assets/img/image.png" | absolute_url }}">
+  <!-- OpenGraph -->
+  <meta property="og:site_name" content="{{ site.title }}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="{{ site.title }} - {{ page.title }}" />
+  <meta
+    property="og:description"
+    content="{% if page.excerpt %}{{ page.excerpt | strip | strip_html }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"
+  />
+  <meta property="og:image" content="{{ "/assets/img/image.png" | absolute_url
+  }}">
 
-
-<!-- OpenGraph -->
-<meta property="og:site_name" content="{{ site.title }}">
-<meta property="og:type" content="website">
-<meta property="og:title" content="{{ site.title }} - {{ page.title }}">
-<meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip | strip_html }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-<meta property="og:image" content="{{ "/assets/img/image.png" | absolute_url }}">
-
-
-<!-- Styles -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" type="text/css" media="screen" href="{{ "/assets/css/style.css" | absolute_url }}" />
+  <!-- Styles -->
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Raleway"
+  />
+  <link rel="stylesheet" type="text/css" media="screen" href="{{
+  "/assets/css/style.css" | absolute_url }}" />
+</head>
