--- a/_scss/includes/_Navigation.scss
+++ b/_scss/includes/_Navigation.scss
@@ -9,7 +9,7 @@
   opacity: 0;
   pointer-events: none;
 
-  @media screen and (min-width: $breakpoint) {
+  @media screen and (min-width: $breakpoint + 1) {
     opacity: 1;
     pointer-events: auto;
   }
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   height: 0;
-  margin-top: 0;
+  margin: 0 -3.5rem;
   opacity: 0;
   pointer-events: none;
   box-shadow: inset 0 0 10px rgba($body-color, 0.25);
@@ -27,9 +27,6 @@
   overflow: hidden;
 
   @media screen and (max-width: $breakpoint) {
-    height: 0;
-    margin: 0 -3.5rem;
-    padding: 0;
     opacity: 1;
   }
 }
@@ -56,7 +53,7 @@
   display: none;
   margin-left: 1em;
 
-  @media screen and (min-width: $breakpoint) {
+  @media screen and (min-width: $breakpoint + 1) {
     display: inline;
   }
 }
