Switch color scheme

--- a/_scss/_body.scss
+++ b/_scss/_body.scss
@@ -1,5 +1,6 @@
 body {
-  background: $body-bg;
+  background-color: $body-background-color;
+  background-image: $body-background-image;
   color: $body-color;
   margin: 0;
 }
