--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,9 +1,11 @@
-$body-bg: #f5f5f5;
-$body-color: #040f3d;
-
+$white: #f5f5f5;
 $primary: #040f3d;
 
-$border-color: rgba($body-color, 0.25);
+$body-background-color: #26a0da;
+$body-background-image: linear-gradient(160deg, #57d6d6 0%, #26a0da 100%);
+$body-color: $white;
+
+$border-color: rgba($primary, 0.25);
 $border-width: 2px;
 
 $link-bg: transparent;
