--- a/_scss/includes/_Navigation.scss
+++ b/_scss/includes/_Navigation.scss
@@ -22,7 +22,7 @@
   margin: 0 -3.5rem;
   opacity: 0;
   pointer-events: none;
-  box-shadow: inset 0 0 10px rgba($body-color, 0.25);
+  box-shadow: inset 0 0 10px rgba($primary, 0.25);
   transition: all 0.5s;
   overflow: hidden;
 
