--- a/_scss/includes/_ContactForm.scss
+++ b/_scss/includes/_ContactForm.scss
@@ -13,6 +13,7 @@
 }
 
 .ContactForm__form {
+  color: $primary;
   background-color: $white;
   background-clip: border-box;
   box-shadow: 0 0 10px rgba($primary, 0.25);
