--- a/_includes/Head.html
+++ b/_includes/Head.html
@@ -30,10 +30,7 @@
   }}">
 
   <!-- Styles -->
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Raleway"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="{{
   "/assets/css/style.css" | absolute_url }}" />
 </head>
