--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   {% include Head.html %}
   <body>
-    {% include Page.html %} {% include ContactForm.html %}
+  {% include ContactForm.html %}
+  {% include Page.html %}
   </body>
 </html>
