--- a/_scss/_animations.scss
+++ b/_scss/_animations.scss
@@ -11,6 +11,7 @@
   animation: fade-in ease-in 1;
   animation-fill-mode: forwards;
   animation-duration: 0.8s;
+  will-change: opacity;
 }
 
 @keyframes fade-in-and-condense {
@@ -28,24 +29,21 @@
   animation: fade-in-and-condense;
   animation-fill-mode: forwards;
   animation-duration: 0.8s;
+  will-change: opacity, letter-spacing;
 }
 
 .anim-delay-1 {
   animation-delay: 0.1s;
-  z-index: 90;
 }
 
 .anim-delay-2 {
   animation-delay: 0.2s;
-  z-index: 80;
 }
 
 .anim-delay-3 {
   animation-delay: 0.3s;
-  z-index: 70;
 }
 
 .anim-delay-4 {
   animation-delay: 0.4s;
-  z-index: 60;
 }
