--- a/_scss/includes/_Navigation.scss
+++ b/_scss/includes/_Navigation.scss
@@ -3,13 +3,16 @@
 .Navigation {
   display: flex;
   flex-direction: row;
-  padding-right: 1.5rem;
+  margin-right: 2.5rem;
   font-size: 1rem;
-  transition: all 0.5s;
   opacity: 0;
+  will-change: opacity;
   pointer-events: none;
+  transform: translateX(2rem);
+  transition: opacity 0.5s, transform 0.5s;
 
   @media screen and (min-width: $breakpoint + 1) {
+    transform: translateX(0rem);
     opacity: 1;
     pointer-events: auto;
   }
@@ -23,7 +26,8 @@
   opacity: 0;
   pointer-events: none;
   box-shadow: inset 0 0 10px rgba($primary, 0.25);
-  transition: all 0.5s;
+  transition: opacity 0.5s, height 0.5s, padding 0.5s;
+  will-change: opacity, height, padding;
   overflow: hidden;
 
   @media screen and (max-width: $breakpoint) {
@@ -45,7 +49,6 @@
 
 .Navigation--mobile .Navigation__list {
   flex-direction: column;
-  transition: all 0.5s;
   pointer-events: none;
 }
 
@@ -63,7 +66,6 @@
   margin: 0 2rem;
   padding: 1.5rem 2.5rem;
   line-height: 0;
-  transition: all 0.5s;
   display: block;
   flex-grow: 1;
 }
