--- a/_scss/includes/_Container.scss
+++ b/_scss/includes/_Container.scss
@@ -12,7 +12,7 @@
 .Container__title {
   @extend .anim-fade-in-and-condense;
   @extend .anim-delay-1;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
   max-width: 40rem;
   font-size: 6rem;
   font-weight: bold;
