--- a/_includes/Head.html
+++ b/_includes/Head.html
@@ -8,7 +8,7 @@
 
   <!-- Icons -->
   <link rel="icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
-  <meta name="theme-color" content="#f7f7f7" />
+  <meta name="theme-color" content="#26a0da" />
   <link rel="apple-touch-icon" sizes="180x180" href="{{
   "/assets/icon/apple-touch-icon.png" | absolute_url }}"> <link rel="icon"
   type="image/png" sizes="32x32" href="{{ "/assets/icon/favicon-32x32.png" |
