Update linting tools and lint code

--- a/_includes/Head.html
+++ b/_includes/Head.html
@@ -7,16 +7,14 @@
   <meta name="description" content="{{ page.description }}" />
 
   <!-- Icons -->
-  <link rel="icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
+  <link rel="icon" href="{{ '/assets/icon/favicon.ico' | absolute_url }}">
   <meta name="theme-color" content="#57d6d6" />
-  <link rel="apple-touch-icon" sizes="180x180" href="{{
-  "/assets/icon/apple-touch-icon.png" | absolute_url }}"> <link rel="icon"
-  type="image/png" sizes="32x32" href="{{ "/assets/icon/favicon-32x32.png" |
-  absolute_url }}"> <link rel="icon" type="image/png" sizes="16x16" href="{{
-  "/assets/icon/favicon-16x16.png" | absolute_url }}"> <link rel="manifest"
-  href="{{ "/assets/icon/manifest.json" | absolute_url }}"> <link rel="shortcut
-  icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}"> <meta
-  itemprop="image" content="{{ "/assets/img/image.png" | absolute_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icon/apple-touch-icon.png' | absolute_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/icon/favicon-32x32.png' | absolute_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/icon/favicon-16x16.png' | absolute_url }}">
+  <link rel="manifest" href="{{ '/assets/icon/manifest.json' | absolute_url }}">
+  <link rel="shortcut icon" href="{{ '/assets/icon/favicon.ico' | absolute_url }}">
+  <meta itemprop="image" content="{{ '/assets/img/image.png' | absolute_url }}">
 
   <!-- OpenGraph -->
   <meta property="og:site_name" content="{{ site.title }}" />
@@ -26,11 +24,12 @@
     property="og:description"
     content="{% if page.excerpt %}{{ page.excerpt | strip | strip_html }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"
   />
-  <meta property="og:image" content="{{ "/assets/img/image.png" | absolute_url
-  }}">
+  <meta property="og:image" content="{{ '/assets/img/image.png' | absolute_url }}">
 
   <!-- Styles -->
-  <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" media="screen" href="{{
-  "/assets/css/style.css" | absolute_url }}" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css' | absolute_url }}"/>
 </head>
