--- a/_includes/Navigation.html
+++ b/_includes/Navigation.html
@@ -1,7 +1,5 @@
 <nav class="Navigation{% if include.mobile %}--mobile{% endif %}">
-  {% if include.mobile %}
-    {% include MenuToggle.html %}
-  {% endif %}
+  {% if include.mobile %} {% include MenuToggle.html %} {% endif %}
   <ul class="Navigation__list">
     {% for link in site.data.links %}
     <li class="Navigation__list-item">
