--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,6 @@
 <html lang="en">
   {% include Head.html %}
   <body>
-  {% include ContactForm.html %}
-  {% include Page.html %}
+    {% include ContactForm.html %} {% include Page.html %}
   </body>
 </html>
