--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -11,9 +11,9 @@ $border-width: 2px;
 $link-bg: transparent;
 $link-color: $primary;
 
-$font-family-sans-serif: 'Manrope', -apple-system, BlinkMacSystemFont,
-  'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
-  'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+$font-family-sans-serif: 'Manrope', -apple-system, 'BlinkMacSystemFont',
+  'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', sans-serif,
+  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 
 $breakpoint: 768px;
 $breakpoint-tiny: 359px;
