Make contact form work better on mobile screens

--- a/_includes/ContactForm.html
+++ b/_includes/ContactForm.html
@@ -29,7 +29,7 @@
 
     <label class="ContactForm__label" for="message">Your message to me</label>
     <textarea
-      class="ContactForm__text-field"
+      class="ContactForm__text-area"
       name="message"
       id="message"
       rows="8"
