--- a/_scss/includes/_Container.scss
+++ b/_scss/includes/_Container.scss
@@ -19,6 +19,7 @@
   font-weight: bold;
   line-height: 1.2em;
   transition: font-size 0.5s;
+  word-spacing: 100vw;
 
   @media screen and (max-width: $breakpoint) {
     font-size: 4rem;
