--- a/_includes/ContactForm.html
+++ b/_includes/ContactForm.html
@@ -9,7 +9,7 @@
     >
     <h2>Contact me</h2>
 
-    <label class="ContactForm__label" for="name">Your name</label>
+    <label class="ContactForm__label" for="name">Name</label>
     <input
       class="ContactForm__text-field"
       type="text"
@@ -18,7 +18,7 @@
       required
     />
 
-    <label class="ContactForm__label" for="email">Your email address</label>
+    <label class="ContactForm__label" for="email">Email address</label>
     <input
       class="ContactForm__text-field"
       type="text"
@@ -27,7 +27,7 @@
       required
     />
 
-    <label class="ContactForm__label" for="message">Your message to me</label>
+    <label class="ContactForm__label" for="message">Message</label>
     <textarea
       class="ContactForm__text-area"
       name="message"
