Some Safari tweaks

--- a/_scss/includes/_ContactForm.scss
+++ b/_scss/includes/_ContactForm.scss
@@ -68,7 +68,9 @@ $dog-ear-size: 4rem;
   border: 0;
   box-shadow: 0 3px 5px rgba(#000, 0.25);
   box-sizing: border-box;
+  color: $primary;
   display: none;
+  font-family: inherit;
   font-size: 1.5rem;
   font-weight: bold;
   height: $dog-ear-size;
@@ -130,6 +132,8 @@ $dog-ear-size: 4rem;
   cursor: pointer;
   font-family: inherit;
   font-size: 1.2rem;
+  line-height: 1.2rem;
+  margin: 0;
   padding: 1rem;
   transition: background-color 0.2s;
   width: auto;
