--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,8 +1,8 @@
 $white: #f5f5f5;
 $primary: #040f3d;
 
-$body-background-color: #26a0da;
-$body-background-image: linear-gradient(180deg, #57d6d6 0%, #26a0da 100%);
+$body-background-color: #00b3ea;
+$body-background-image: linear-gradient(180deg, #00b3ea 10%, #1d3bac 90%);
 $body-color: $white;
 
 $border-color: rgba($primary, 0.25);
