--- a/_scss/includes/_Header.scss
+++ b/_scss/includes/_Header.scss
@@ -17,8 +17,8 @@
   flex-grow: 1;
   font-size: 2rem;
   line-height: 3rem;
-  transform: translateX(2rem);
-  transition: transform 0.5s;
+  transform: translateX(2.5rem);
+  transition: transform 0.4s ease-out;
 
   @media screen and (max-width: $breakpoint) {
     margin-left: 0;
