--- a/_scss/includes/_Navigation.scss
+++ b/_scss/includes/_Navigation.scss
@@ -8,7 +8,7 @@
   opacity: 0;
   pointer-events: none;
   transform: translateX(5rem);
-  transition: opacity 0.5s, transform 0.5s;
+  transition: opacity 0.4s ease-out, transform 0.4s ease-out;
   will-change: opacity;
 
   @media screen and (min-width: $breakpoint + 1) {
@@ -27,7 +27,7 @@
   opacity: 0;
   overflow: visible;
   pointer-events: none;
-  transition: opacity 0.5s, height 0.5s, padding 0.5s;
+  transition: opacity 0.4s ease-out, height 0.4s ease-out, padding 0.4s ease-out;
   will-change: opacity, height, padding;
 
   @media screen and (max-width: $breakpoint) {
