--- a/_includes/Container.html
+++ b/_includes/Container.html
@@ -1,8 +1,4 @@
 <div class="Container">
-  <h1 class="Container__title">
-    {{page.title}}
-  </h1>
-  <div class="Container__content">
-    {{content}}
-  </div>
+  <h1 class="Container__title">{{page.title}}</h1>
+  <div class="Container__content">{{content}}</div>
 </div>
