Switch font to Poppins

--- a/_includes/Head.html
+++ b/_includes/Head.html
@@ -54,7 +54,7 @@
 
   <!-- Styles -->
   <link
-    href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
     rel="stylesheet"
   />
   <link
